--- a/AssigmentPRN221/AssigmentPRN221.csproj
+++ b/AssigmentPRN221/AssigmentPRN221.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BussinessObject\BussinessObject.csproj" />
     <ProjectReference Include="..\DataAccessObject\DataAccessObject.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
